Did comment stuff. Fixed height of percent on mobile. #60

--- a/assets/css/small-raffle-meter.css
+++ b/assets/css/small-raffle-meter.css
@@ -33,11 +33,11 @@
     margin-left:auto;
     margin-right:auto;
 }
-
+/* For mobile */
 @media (max-width: 700px) and (orientation: portrait){
     #percent {
-        font-size:12px;
+        font-size:13px;
         right: 0px;
-        width:auto;
+        height: 22px;
     }
 }
